# vpn_service

./: .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  dump.sql  pyproject.toml
src/: manage.py
src/account/: admin.py  forms.py  models.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_alter_user_managers.py
src/account/templates/: base.html  index.html
src/account/templates/account/: login.html  profile.html  register.html
src/account/templates/statistic/: create_site.html  site_details.html  sites.html
src/app/: asgi.py  urls.py  wsgi.py
src/app/conf/: __init__.py  apps.py  core.py  database.py  locale.py
src/helpers/: url_formater.py
src/service/: models.py  urls.py  views.py
src/service/migrations/: 0001_initial.py
