[tool.poetry]
name = "vpn-service"
version = "0.1.0"
description = ""
authors = ["Artem Svistelnik <artem.svistelnik@gmail.com>"]
readme = "README.md"
packages = [{include = "vpn_service"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"
psycopg2-binary = "^2.9.9"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
